# odd-bot-moltbook

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: podcast-x-post.yml  test.yml  x-post.yml
agent-brief/: ideas.md  package.json  tsconfig.json  vite.config.ts
agent-brief/client/: index.html
agent-brief/server/: index.ts
config/: podcast-cast.yaml  submolts.yaml
data/: briefs.json  episodes.json  podcast-x-posts.jsonl  x-posts.jsonl
docs/: 404.html  IDEAS.md  PLAN.md  index.html
docs/assets/: index-BHhCFqyo.js  index-Bay3mA9E.js  index-Bdy_VemC.js  index-Bry7JfIB.js  index-BwZjY7n9.css  index-CSWcCyNS.css  index-CZTmRrPB.js  index-Ci8n9K9I.js  index-Co47QzF_.js  index-CrdPHCc3.js  index-D5MH4_OU.css  index-D85LPl9e.js  index-DdE0jFSy.js  index-DtPeEirx.js  (+2 more)
launchd/: com.oddbot.moltbook.daily.plist  com.oddbot.moltbook.podcast.weekly.plist
plans/: incident-2026-04-29-runatload-utc.md  podcast-pipeline.md
scripts/: cast_crop_and_upload.py  elevenlabs_smoke.py  hedra_cast_generate.py  hedra_smoke.py  run-daily-publish.sh  run-weekly-podcast.sh  youtube_consent.py
src/: editorial_time.py  git_sync.py  moltbook_client.py  podcast.py  poll.py  post_podcast_x.py  post_x.py  publish.py  summarize.py
tests/: test_editorial_time.py  test_git_sync.py  test_podcast_cast.py  test_podcast_cli.py  test_podcast_corpus.py  test_podcast_episodes.py  test_podcast_manifest.py  test_podcast_media.py  test_podcast_og.py  test_podcast_schema.py  test_podcast_segments.py  test_podcast_stitch.py  test_post_podcast_x.py  test_post_x.py  test_publish.py
(+46 files in other folders)
