[project]
name = "odd-bot-moltbook"
version = "0.1.0"
description = "Weekly agent-ecosystem commentary engine sourced from Moltbook activity"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "datasets>=2.16",
    "duckdb>=0.10",
    "pydantic>=2.6",
    "pyyaml>=6.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]
